<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/logo_login"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_70sdp" />


        <LinearLayout
            android:layout_centerInParent="true"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_edittext"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:imeOptions="flagForceAscii"
                    android:inputType="textPassword|textVisiblePassword"
                    android:maxLength="10"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/colorGray" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/border_edittext"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:imeOptions="flagForceAscii"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/colorGray" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/Remember_account" />

                <LinearLayout
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_1sdp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgVN_EN"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:onClick="setLanguage"
                        android:src="@drawable/image_language_vn" />
                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/register_login_button"
                android:onClick="setLogin"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
           >

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtForgotPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  |  "
                    android:textColor="#000000"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:id="@+id/tvHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtForgotPassword"
                    android:text="@string/txtHelp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_1sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#000000"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  " />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtForgotPassword"
                    android:text="@string/txtRegister"

                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</layout>